fix: vercel 배포 실패로인한 departmentList 수정

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ next-env.d.ts
 # image optimizer
 public/images/**/nextImageExportOptimizer/
 public/images/next-image-export-optimizer-hashes.json
+.env*.local
